added new final sway and waybar configs

--- a/waybar/style.css
+++ b/waybar/style.css
@@ -1,149 +1,57 @@
 * {
-  font-family: "JetBrainsMono Nerd Font";
-  font-size: 12pt;
+  font-family: JetBrainsMono Nerd Font Bold;
+  font-size: 14px;
   font-weight: bold;
-  border-radius: 0px;
-  transition-property: background-color;
-  transition-duration: 0.5s;
+  min-height: 0;
+  color: #f8f8f2;
 }
 
 window#waybar {
-  background-color: transparent;
-}
-
-window > box {
-  margin-left: 5px;
-  margin-right: 5px;
-  margin-top: 5px;
-  background-color: rgb(30, 30, 46);
+  background-color: #282a36;
 }
 
 #workspaces {
-  padding-left: 0px;
-  padding-right: 4px;
+  margin-top: 3px;
+  margin-bottom: 2px;
+  margin-right: 10px;
+  margin-left: 5px;
 }
 
 #workspaces button {
-  padding-top: 5px;
-  padding-bottom: 5px;
-  padding-left: 6px;
-  padding-right: 6px;
+  border-radius: 15px;
+  margin-right: 10px;
+  padding: 1px 3px;
+  font-weight: bold;
+  background-color: #44475a;
+  color: #bd93f9;
 }
 
+#workspaces button.active,
 #workspaces button.focused {
-  background-color: rgb(181, 232, 224);
-  color: rgb(26, 24, 38);
+  padding: 0 3px;
+  box-shadow:
+    rgba(6, 24, 44, 0.4) 0px 0px 0px 2px,
+    rgba(6, 24, 44, 0.65) 0px 4px 6px -1px,
+    rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
+  background: #a656dd;
+  color: #282a36;
 }
 
-#workspaces button.urgent {
-  color: rgb(26, 24, 38);
-}
-
-#workspaces button:hover {
-  background-color: rgb(248, 189, 150);
-  color: rgb(26, 24, 38);
-}
-
-tooltip {
-  background: rgb(48, 45, 65);
-}
-
-tooltip label {
-  color: rgb(217, 224, 238);
-}
-
-#custom-launcher {
-  padding-left: 8px;
-  padding-right: 6px;
-  color: rgb(201, 203, 255);
-}
-
-#mode,
-#clock,
-#memory,
-#temperature,
-#cpu,
+#tray,
 #mpd,
-#idle_inhibitor,
+#custom-weather,
+#cpu,
 #temperature,
+#memory,
+#sway-mode,
 #backlight,
 #pulseaudio,
-#network,
+#custom-vpn,
+#disk,
+#custom-recorder,
+#custom-audiorec,
 #battery,
-#custom-powermenu,
-#custom-cava-internal {
-  padding-left: 10px;
-  padding-right: 10px;
-}
-
-#memory {
-  color: rgb(181, 232, 224);
-}
-
-#cpu {
-  color: rgb(245, 194, 231);
-}
-
-#clock {
-  color: rgb(217, 224, 238);
-}
-
-#idle_inhibitor {
-  color: rgb(221, 182, 242);
-}
-
-#temperature {
-  color: rgb(150, 205, 251);
-}
-
-#backlight {
-  color: rgb(248, 189, 150);
-}
-
-#pulseaudio {
-  color: rgb(245, 224, 220);
-}
-
+#clock,
 #network {
-  color: #abe9b3;
-}
-
-#network.disconnected {
-  color: rgb(255, 255, 255);
-}
-
-#battery.charging,
-#battery.full,
-#battery.discharging {
-  color: rgb(250, 227, 176);
-}
-
-#battery.critical:not(.charging) {
-  color: rgb(242, 143, 173);
-}
-
-#custom-powermenu {
-  color: rgb(242, 143, 173);
-}
-
-#tray {
-  padding-right: 8px;
-  padding-left: 10px;
-}
-
-#mpd.paused {
-  color: #414868;
-  font-style: italic;
-}
-
-#mpd.stopped {
-  background: transparent;
-}
-
-#mpd {
-  color: #c0caf5;
-}
-
-#custom-cava-internal {
-  font-family: "Hack Nerd Font";
+  padding: 0 10px;
 }
