--- a/waybar/style.css
+++ b/waybar/style.css
@@ -1,29 +1,37 @@
 * {
-  font-family: JetBrainsMono Nerd Font Bold;
-  font-size: 14px;
+  font-family: JetBrainsMono Nerd Font;
+  font-size: 16px;
   font-weight: bold;
+  border: none;
+  border-radius: 4px;
   min-height: 0;
-  color: #f8f8f2;
 }
 
 window#waybar {
-  background-color: #282a36;
+  background-color: rgba(43, 48, 59, 0.9);
+  border-bottom: 3px solid rgba(100, 114, 125, 0.5);
+  color: #f8f8f2;
+  transition-property: background-color;
+  transition-duration: 0.5s;
+  border-radius: 0;
 }
 
 #workspaces {
   margin-top: 3px;
   margin-bottom: 2px;
   margin-right: 10px;
-  margin-left: 5px;
+  margin-left: 1px;
 }
 
 #workspaces button {
-  border-radius: 15px;
-  margin-right: 10px;
-  padding: 1px 3px;
-  font-weight: bold;
-  background-color: #44475a;
-  color: #bd93f9;
+  padding: 0 0.4em;
+  background-color: transparent;
+  border-radius: 0;
+  color: #ffffff;
+}
+
+#workspaces button:hover {
+  background: rgba(0, 0, 0, 0.2);
 }
 
 #workspaces button.active,
@@ -33,7 +41,7 @@ window#waybar {
     rgba(6, 24, 44, 0.4) 0px 0px 0px 2px,
     rgba(6, 24, 44, 0.65) 0px 4px 6px -1px,
     rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
-  background: #a656dd;
+  background: #bd93f9;
   color: #282a36;
 }
 
@@ -54,4 +62,24 @@ window#waybar {
 #clock,
 #network {
   padding: 0 10px;
+  margin: 6px 3px;
+  color: #333333;
+  background-color: #bd93f9;
+  min-width: 16px;
+}
+
+#battery.charging,
+#battery.plugged {
+  color: #ffffff;
+  background-color: #26a65b;
+}
+
+#battery.critical:not(.charging) {
+  background-color: #f53c3c;
+  color: #ffffff;
+  animation-name: blink;
+  animation-duration: 0.5s;
+  animation-timing-function: steps(12);
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
 }
