--- a/waybar/style.css
+++ b/waybar/style.css
@@ -1,85 +1,224 @@
+/* ================================ */
+/*            Common CSS            */
+/* ================================ */
 * {
-  font-family: JetBrainsMono Nerd Font;
-  font-size: 16px;
-  font-weight: bold;
-  border: none;
-  border-radius: 4px;
+  /* `otf-font-awesome` is required to be installed for icons */
+  padding: 0;
+  margin: 0;
   min-height: 0;
-}
-
-window#waybar {
-  background-color: rgba(43, 48, 59, 0.9);
-  border-bottom: 3px solid rgba(100, 114, 125, 0.5);
-  color: #f8f8f2;
-  transition-property: background-color;
-  transition-duration: 0.5s;
   border-radius: 0;
+  border: none;
+  text-shadow: none;
+  transition: none;
+  box-shadow: none;
 }
 
+/* the whole window */
+window#waybar {
+  color: #fff4d2;
+  background: none;
+}
+
+window#waybar.hidden {
+  opacity: 1;
+}
+
+#custom-rofi,
+#workspaces button,
+#workspaces button:hover,
+#workspaces button.visible,
+#workspaces button.visible:hover,
+#workspaces button.active,
+#workspaces button.active:hover,
+#workspaces button.urgent,
+#window,
+#scratchpad,
+#tray,
+#disk,
+#network,
+#cpu,
+#temperature,
+#temperature.critical,
+#backlight,
+#memory,
+#pulseaudio,
+#pulseaudio.muted,
+#battery,
+#battery.critical,
+#battery.warning,
+#clock {
+  font-family: JetBrainsMono Nerd Font Propo;
+  font-size: 16px;
+  font-weight: 800;
+  color: #202020;
+  background: #202020;
+  border: 3px solid #202020;
+  border-radius: 3px;
+}
+
+#window,
+#scratchpad,
+#tray,
+#disk,
+#cpu,
+#temperature,
+#temperature.critical,
+#backlight,
+#network,
+#memory,
+#pulseaudio,
+#pulseaudio.muted,
+#battery,
+#battery.critical,
+#battery.warning,
+#clock {
+  padding-right: 4px;
+}
+
+#custom-rofi {
+  background: #83a598;
+  padding: 0 6px;
+}
+
+/* ================================ */
+/*       workspaces module          */
+/* ================================ */
 #workspaces {
-  margin-top: 3px;
-  margin-bottom: 2px;
-  margin-right: 10px;
-  margin-left: 1px;
+  margin: 0px;
 }
 
 #workspaces button {
-  padding: 0 0.4em;
-  background-color: transparent;
-  border-radius: 0;
+  /*color: #fff4d2;*/
   color: #ffffff;
+  padding: 0 4px;
+  margin: 0px 3px;
+  min-width: 25px;
 }
 
 #workspaces button:hover {
-  background: rgba(0, 0, 0, 0.2);
+  background: #d3869b;
 }
 
-#workspaces button.active,
-#workspaces button.focused {
-  padding: 0 3px;
-  box-shadow:
-    rgba(6, 24, 44, 0.4) 0px 0px 0px 2px,
-    rgba(6, 24, 44, 0.65) 0px 4px 6px -1px,
-    rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
+#workspaces button.visible {
+  /*background: #8ec07c;*/
   background: #bd93f9;
-  color: #282a36;
 }
 
-#tray,
-#mpd,
-#custom-weather,
-#cpu,
-#temperature,
-#memory,
-#sway-mode,
+#workspaces button.visible:hover {
+  /*background: #8ec07c;*/
+  background: #bd93f9;
+}
+
+#workspaces button.active {
+  /*background: #8ec07c;*/
+  background: #bd93f9;
+}
+
+#workspaces button.active:hover {
+  /*background: #8ec07c;*/
+  background: #bd93f9;
+}
+
+#workspaces button.urgent {
+  background: #ea6962;
+}
+
+/* ================================ */
+/*            window                 */
+/* ================================ */
+
+#window,
+#scratchpad {
+  /*color: #d3869b;*/
+  color: #ffffff;
+}
+
+/* ================================ */
+/*            tray                 */
+/* ================================ */
+
+#tray {
+  padding: 0 6px 0 6px;
+}
+
+/* ================================ */
+/*            disk                 */
+/* ================================ */
+
+#disk {
+  /*color: #ea6962;*/
+  color: #fff;
+}
+
+/* ================================ */
+/*            cpu                  */
+/* ================================ */
+#cpu {
+  /*color: #e78a4e;*/
+  color: #fff;
+}
+
+/* ================================ */
+/*            temp                  */
+/* ================================ */
+#temperature {
+  /*color: #d8a657;*/
+  color: #fff;
+}
+
+#temperature.critical {
+  color: #cc241d;
+}
+
+/* ================================ */
+/*            backlight             */
+/* ================================ */
 #backlight,
-#pulseaudio,
-#custom-vpn,
-#disk,
-#custom-recorder,
-#custom-audiorec,
-#battery,
-#clock,
 #network {
-  padding: 0 10px;
-  margin: 6px 3px;
-  color: #333333;
-  background-color: #bd93f9;
-  min-width: 16px;
+  /*color: #f6c657;*/
+  color: #fff;
 }
 
-#battery.charging,
-#battery.plugged {
-  color: #ffffff;
-  background-color: #26a65b;
+/* ================================ */
+/*            memory                */
+/* ================================ */
+#memory {
+  /*color: #458588;*/
+  color: #fff;
 }
 
-#battery.critical:not(.charging) {
-  background-color: #f53c3c;
-  color: #ffffff;
-  animation-name: blink;
-  animation-duration: 0.5s;
-  animation-timing-function: steps(12);
-  animation-iteration-count: infinite;
-  animation-direction: alternate;
+/* ================================ */
+/*         pulseaudio               */
+/* ================================ */
+#pulseaudio {
+  /*color: #83a598;*/
+  color: #fff;
+}
+
+#pulseaudio.muted {
+  color: #ea6962;
+}
+
+/* ================================ */
+/*            battery               */
+/* ================================ */
+#battery {
+  /*color: #689d6a;*/
+  color: #fff;
+}
+
+#battery.critical {
+  color: #cc241d;
+}
+
+#battery.warning {
+  /*color: #e78a4e;*/
+  color: #fff;
+}
+/* ================================ */
+/*            clock                 */
+/* ================================ */
+#clock {
+  /*color: #8ec07c;*/
+  color: #fff;
 }
