--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,31 +1,3 @@
-/* Define Catppuccin Mocha Colors */
-@define-color base #1e1e2e;
-@define-color crust #11111b;
-@define-color mantle #181825;
-@define-color text #cdd6f4;
-@define-color subtext0 #a6adc8;
-@define-color subtext1 #bac2de;
-@define-color surface0 #313244;
-@define-color surface1 #45475a;
-@define-color surface2 #585b70;
-@define-color overlay0 #6c7086;
-@define-color overlay1 #7f849c;
-@define-color overlay2 #9399b2;
-@define-color lavender #b4befe;
-@define-color blue #89b4fa;
-@define-color sapphire #74c7ec;
-@define-color sky #89dceb;
-@define-color teal #94e2d5;
-@define-color green #a6e3a1;
-@define-color yellow #f9e2af;
-@define-color peach #fab387;
-@define-color maroon #eba0ac;
-@define-color red #f38ba8;
-@define-color mauve #cba6f7;
-@define-color pink #f5c2e7;
-@define-color flamingo #f2cdcd;
-
-/* Waybar Styles */
 * {
   font-family: "JetBrainsMono Nerd Font";
   font-size: 16px;
@@ -33,9 +5,8 @@
 }
 
 window#waybar {
-  background-color: @mantle;
-  /*background-color: transparent;*/
-  color: @text;
+  background-color: #1a1b26;
+  color: #fdf6e3;
 }
 
 #clock,
@@ -48,61 +19,54 @@ window#waybar {
 #workspaces button.active,
 #workspaces button.active:hover,
 #workspaces button.urgent,
+#window,
 #memory,
 #network,
 #scratchpad,
 #temperature,
 #pulseaudio,
 #backlight {
-  background: @surface1;
-  padding: 5px 10px;
+  background: #24283b;
+  padding: 3px 10px;
+  border-radius: 5px;
   margin: 3px;
-  border-radius: 16px;
+  margin-top: 0px;
+  margin-bottom: 0px;
 }
 
-#workspaces {
-  margin: 0px;
+#workspaces button,
+#workspaces button:hover,
+#workspaces button.visible,
+#workspaces button.visible:hover,
+#workspaces button.active,
+#workspaces button.active:hover,
+#workspaces button.urgent {
+  padding: 0 2px;
 }
 
 #workspaces button {
-  background: @surface0;
-  color: #f5e0dc;
-  padding: 5px 10px;
-  margin: 3px;
+  background: #24283b;
+  color: #fdf6e3;
 }
 
 #workspaces button:hover {
-  background: #d3869b;
+  background: #24283b;
 }
 
 #workspaces button.visible {
-  background: #cba6f7;
+  background: #7aa2f7;
   color: #1e1e2e;
 }
 
 #workspaces button.visible:hover {
-  background: #cba6f7;
-  color: #1e1e2e;
-}
-
-#workspaces button.active {
-  background: @mauve;
-}
-
-#workspaces button:hover {
-  color: #c3dee5;
-  background: #1e1e2e;
-  opacity: 1;
-  animation: none;
+  background: #24283b;
+  color: #fdf6e3;
 }
 
 #workspaces button.urgent {
   background: #ea6962;
 }
 
-#battery {
-  color: #52b788;
-}
 #battery.warning {
   color: #f9c74f;
 }
@@ -110,40 +74,32 @@ window#waybar {
   color: #ea6962;
 }
 
+#backlight {
+  color: #9ece6a;
+}
+
 #cpu {
-  color: #eef5db;
+  color: #bb9af7;
 }
 
 #memory {
-  color: #eef5db;
+  color: #859900;
 }
 
 #temperature {
-  color: #adf7b6;
+  color: #e0af68;
 }
 
 #network {
-  color: #cba6f7;
+  color: #f776ae;
 }
 
 #pulseaudio {
-  color: #eef5db;
-}
-
-#clock {
-  color: @yellow;
-}
-
-#backlight {
-  color: #eef5db;
-}
-
-#tray {
-  padding: 5px;
+  color: #7aa2f7;
 }
 
 .modules-left,
 .modules-right,
 .modules-center {
-  padding: 5px;
+  padding: 5px 0px;
 }
