--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -5,8 +5,8 @@
 }
 
 window#waybar {
-  /* background-color: transparent; */
   background-color: #1a1b26;
+  /* background-color: rgba(26, 27, 38, 0.8); */
   color: #fdf6e3;
 }
 
@@ -30,7 +30,7 @@ window#waybar {
 #backlight {
   background: #24283b;
   padding: 5px 15px;
-  border-radius: 16px;
+  border-radius: 2px;
   margin: 3px;
   margin-top: 0px;
   margin-bottom: 0px;
