--- a/.config/waybar/themes/monochrome.css
+++ b/.config/waybar/themes/monochrome.css
@@ -2,8 +2,8 @@
 @define-color background-alt #1a1a1a;
 @define-color foreground #ffffff;
 
-@define-color warning #bbbbbb;
-@define-color critical #ffffff;
+@define-color warning #ffcc00;
+@define-color critical #ff0000;
 @define-color good #888888;
 
 /* Module Colors (All Shades of Grey) */
