--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -3,13 +3,13 @@
 
 * {
   font-family: "JetBrainsMono Nerd Font";
-  font-size: 14px;
+  font-size: 16px;
   font-weight: bold;
 }
 
 window#waybar {
-  background-color: transparent;
-  /* background-color: @background; */
+  /* background-color: transparent; */
+  background-color: @background;
   color: @foreground;
 }
 
@@ -27,9 +27,9 @@ window#waybar {
 #clock {
   padding: 2px 4px;
   margin: 3px;
-  margin-top: 0;
-  margin-bottom: 0;
-  border-radius: 8px;
+  margin-top: 2;
+  margin-bottom: 2;
+  border-radius: 6px;
   background: @background-alt;
 }
 
