--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -3,13 +3,13 @@
 
 * {
   font-family: "JetBrainsMono Nerd Font";
-  font-size: 16px;
+  font-size: 15px;
   font-weight: bold;
 }
 
 window#waybar {
-  background-color: transparent;
-  /* background-color: @background; */
+  /* background-color: transparent; */
+  background-color: @background;
   color: @foreground;
 }
 
