--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -8,8 +8,8 @@
 }
 
 window#waybar {
-  /* background-color: transparent; */
-  background-color: @background;
+  background-color: transparent;
+  /* background-color: @background; */
   color: @foreground;
 }
 
@@ -22,6 +22,7 @@ window#waybar {
 #memory,
 #temperature,
 #network,
+#bluetooth,
 #pulseaudio,
 #backlight,
 #battery,
@@ -70,6 +71,7 @@ window#waybar {
 }
 
 /* === Module Specific Colors === */
+#bluetooth,
 #scratchpad,
 #window {
   color: @scratchpad;
