feat: switch to nordic.nvim colorscheme, update UI configs for nord theme
- Replace nord.nvim with nordic.nvim in Neovim config and lockfile
- Update colorscheme setup to use nordic.nvim
- Change Kitty, Waybar, Wlogout, and Sway configs to use nord-inspired colors and settings
- Move Waybar to bottom, tweak modules and workspace settings
- Adjust Sway output scale for eDP-1
- Update Wlogout button styles for nord palette

--- a/.config/wlogout/style.css
+++ b/.config/wlogout/style.css
@@ -12,10 +12,14 @@ button {
   margin: 10px;
   border-radius: 15px;
   font-size: 20px;
-  border-color: black;
-  text-decoration-color: #bd93f9;
-  color: #bd93f9;
-  background-color: #1e1e1e;
+  /* border-color: black; */
+  border-color: #2e3440;
+  /* text-decoration-color: #bd93f9; */
+  text-decoration-color: #81a1c1;
+  /* color: #bd93f9; */
+  color: #81a1c1;
+  /* background-color: #1e1e1e; */
+  background-color: #3b4252;
   border-style: solid;
   border-width: 1px;
   background-repeat: no-repeat;
